# robot

./: .gitignore  Makefile  README.md  fix_systemd_unit.sh  gitbr.sh  gitup.sh  install_dependencies.sh  kill_orphans.sh  requirements.txt  setup_board.sh  setup_boot_services.sh  setup_system.sh
firmwares/Deployed/SC_ST_Servo/: SC_ST_Servo.ino
firmwares/Deployed/SMServo/: SMServo.ino
firmwares/Deployed/xiaomi_cybergear/: xiaomi_cybergear.ino
firmwares/SCServo/: SCServo.ino
firmwares/STServo/: STServo.ino
firmwares/xiaomi_cybergear_flip/: xiaomi_cybergear_driver.cpp  xiaomi_cybergear_flip.ino
src/motor_handler/: README.md  package.xml  setup.cfg  setup.py
src/motor_handler/config/: servo_config_a.yaml  servo_config_b.yaml  servo_config_old.yaml
src/motor_handler/motor_handler/: esp32.py  head_sinusoid_test.py  motor.py  motor_debug_node.py  motor_handler_node.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: default_pose.yaml  ik_viz.rviz  teleop_config.yaml  urdf_viz.rviz
src/robot_bringup/launch/: motor_calibration.launch.py  robot_ik_keyboard.launch.py  robot_ik_viz.launch.py  robot_kinematics_only.launch.py  robot_teleop.launch.py  robot_urdf_viz.launch.py  teleop_rviz.launch.py  test_local.launch.py  test_local_full.launch.py
src/robot_bringup/scripts/: ik_interactive_marker_node.py  ik_keyboard_controller.py  joint_state_relay.py  publish_robot_description.py  record_flicker.py  slider_command_relay.py  teleop_data_logger.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: humanoid.urdf.xacro
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: ComputeIK.action
src/robot_interfaces/msg/: ArmCommand.msg  TeleopCommand.msg
src/robot_kinematics/: package.xml  setup.cfg  setup.py
src/robot_kinematics/robot_kinematics/: default_pose_loader.py  humanoid_kinematics.py  humanoid_kinematics_node.py  unity_ros_transform.py
src/robot_webrtc/: package.xml  setup.cfg  setup.py
src/robot_webrtc/robot_webrtc/: camera_manager_node.py  operator_dashboard_node.py  session_recorder_node.py  (+6 more)
workers/recordings-browser/: package-lock.json  package.json  wrangler.toml
(+15 files in other folders)
